--- a/public/admin.html
+++ b/public/admin.html
@@ -336,7 +336,7 @@
     </div>
 
     <script>
-        const API_BASE = 'http://localhost:3000/api';
+        const API_BASE = `${window.location.origin}/api`;
         let currentBackgroundImage = null;
         let currentMusicFile = null;
         let editingPoemId = null;
